--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <title>luvlqq</title>
+    <meta
+      name="keywords"
+      content="luvlqq, Luvlqq, Иван Лялюк, Ivan Lialiuk, luvlqq.dev, luvl, yvnglual, lual"
+    />
+		<link rel="icon" href="%sveltekit.assets%/ico.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
